# kalshi-fast-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  VERSIONING.md
.claude/skills/kalshi-api-docs/agents/: openai.yaml
.claude/skills/kalshi-api-docs/references/: GOTCHAS.md  WEBSOCKET.md
.codex/environments/: environment.toml
.codex/skills/kalshi-api-docs/: SKILL.md
.codex/skills/kalshi-refresh/: SKILL.md
.github/workflows/: live.yml  rust.yml
docs/: README.md  spec-parity.md
examples/: lob_delta.rs  margin_orderbook.rs  margin_rest.rs  margin_ticker.rs  margin_user_stream.rs  orderbook_stream.rs  public_ticker_stream.rs  raw_borrowed_stream.rs  ws_user_orders.rs
src/: env.rs  lib.rs  types.rs  utils.rs
src/margin/: mod.rs
src/margin/ws/: channel.rs  message.rs  mod.rs  subscription.rs
src/rest/: account.rs  client.rs  communications.rs  events.rs  exchange.rs  live_data.rs  margin.rs  markets.rs  mod.rs  multivariate.rs  orders.rs  pagination.rs  portfolio.rs  rate_limit.rs  retry.rs  series.rs  structured_targets.rs  trades.rs  types.rs
src/ws/: client.rs  event.rs  low_level.rs  mod.rs  protocol.rs  reader.rs  reconnect.rs  subscription.rs  types.rs
src/ws/types/: channel.rs  commands.rs  envelope.rs  mod.rs  msg_type.rs  subscription.rs  wire.rs
tests/: parsing.rs  rest_auth.rs  rest_communications.rs  rest_events.rs  rest_markets.rs  rest_order_groups.rs  rest_orders.rs  rest_public.rs  rest_series.rs  ws_auth.rs  ws_command_behavior.rs  ws_firehose.rs  ws_get_snapshot.rs  ws_parsing.rs  ws_public.rs
tests/common/: mod.rs
(+15 files in other folders)
