[package]
name = "kalshi-fast-rs"
version = "0.4.0"
edition = "2024"
description = "High-performance async Rust client for Kalshi prediction markets API with full WebSocket support"
license = "MIT"
repository = "https://github.com/PoorRican/kalshi-fast-rs"
documentation = "https://docs.rs/kalshi-fast-rs"
keywords = ["kalshi", "trading", "websocket", "prediction-markets", "async"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[lib]
name = "kalshi_fast"

[features]
default = []
live-tests = []

[dependencies]
# REST
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
bytes = "1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

# URL + errors
url = "2"
thiserror = "1"

# Auth (RSA-PSS SHA256 + base64)
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
httpdate = "1"

[dev-dependencies]
anyhow = "1"
dotenvy = "0.15"
chrono = "0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
